compiler/tests/invalid_programs/classes/missing_attribute.jm
#!MissingReferenceError

class Foo
  new()
  end
end

f = Foo()
puts(f.attr)
